# bdd-dev-analysis

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: image_metrics.csv
data/bdd100k_coco/valid/: _annotations.coco.json
data/predictions/: eval_results.pkl  val_predictions.csv  val_predictions.json
docs/: assignment_applied_cv_1_1_2.md  phase1_report.md  phase2_report.md  phase3_report.md
src/: analysis.py  compute_image_metrics.py  dashboard.py  download_data.py  parser.py
src/evaluation/: metrics.py  run_inference.py
src/training/: convert_to_coco.py  dataset.py  train.py
