[project]
name = "bdd-dev-analysis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "gdown>=5.2.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pillow>=12.1.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "streamlit>=1.54.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
]
